fix(deps): Pin protobuf>=6.33.5 to fix CVE (Dependabot #14)
Security fix for HIGH severity vulnerability:
- Issue: protobuf JSON recursion depth bypass
- Affected: protobuf 6.30.0rc1 - 6.33.4
- Fixed: protobuf >= 6.33.5
- Alert: GitHub Dependabot #14

Added version constraint to prevent vulnerable versions.

Resolves: GitHub Dependabot alert #14

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -474,7 +474,7 @@ extend_exclude = [".team", "scripts", "artifacts", "docs", "tests", ".claude"]
 [tool.deptry.per_rule_ignores]
 DEP001 = ["google", "playwright", "repo", "requests", "uvicorn", "pydantic_graph", "repo_client"]
 DEP002 = [
-    "protobuf",
+    "protobuf>=6.33.5",
     "egregora",
     "grpcio-status",
     "mkdocs",
